tests/baselines/reference/newMap.errors.txt
tests/cases/compiler/newMap.ts(1,9): error TS2558: Expected 0-2 type arguments, but got 1.


==== tests/cases/compiler/newMap.ts (1 errors) ====
    new Map<string>();
            ~~~~~~
!!! error TS2558: Expected 0-2 type arguments, but got 1.
    